sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:9: error: illegal start of simple expression
	for (j <- )
                  ^AlgInsertionSort:17: error: ')' expected but '}' found.
}
^